# pybraries

./: .gitignore  .pre-commit-config.yaml  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: pull_request_template.md
.github/workflows/: push.yml
docs/: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  index.rst
docs/stubs/: pybraries.search.Search.rst  pybraries.subscribe.Subscribe.rst
pybraries/: __init__.py  errors.py  helpers.py  make_request.py  pagination.py  remote_sess.py  search.py  search_helpers.py  subscribe.py  subscription_helpers.py
tests/: test_pagination.py  test_projects.py  test_search.py  test_subscribe.py
